cxx/pip_boy/include/fwwasm.h

void setListItemText(int iLogIndex, int iListIndex, const char *szText) WASM_IMPORT("setListItemText");  // implemented
void setListItemSelected(int iLogIndex, int iListIndex);                                                 // implemented
void setListItemTopIndex(int iLogIndex, int iListIndex);                                                 // implemented
void clearLogOrPlotData(int iLogIndexPlusOne, int iPlotIndexPlusOne) WASM_IMPORT("clearLogOrPlotData");  // implemented
void addControlLogList(int iPanelIndex, int iControlIndex, int iVisible, int iLog, int iX, int iY, int iWidth,
                       int iHeight, int iFontType, int iFontSize, int iR, int iG, int iB, int iRFont, int iGFont,
                       int iBFont, int iListMode) WASM_IMPORT("addControlLogList");  // implemented
void addControlPlotXAxis(int iPanelIndex, int iControlIndex, int iScrollMode, unsigned long long iTimeMin,
                         unsigned long long iTimeMax) WASM_IMPORT("addControlPlotXAxis");
void addControlPlotData(int iPlotDataIndex, int iR, int iG, int iB) WASM_IMPORT("addControlPlotData");  // implemented
void addControlPlot(int iPanelIndex, int iControlIndex, int iVisible, int iPlotDataIndexBitField, int iX, int iY,
                    int iWidth, int iHeight, int iMin, int iMax, int iR, int iG, int iB)
    WASM_IMPORT("addControlPlot");  // implemented
void addControlNumber(int iPanelIndex, int iControlIndex, int iVisible, int iX, int iY, int iWidth, int iFontSize,
                      int iFontType, int iR, int iG, int iB, int iIsFloat, int iFloatDigits, int bIsHexFormat,
                      int bIsUnsigned) WASM_IMPORT("addControlNumber");  // implemented
void addControlPicture(int iPanelIndex, int iControlIndex, int iX, int iY, int iPictureId, int iVisible)
    WASM_IMPORT("addControlPicture");  // tested
void addControlText(int iPanelIndex, int iControlIndex, int iX, int iY, int iFontType, int iFontSize, int iR, int iG,
                    int iB,
                    const char *szText) WASM_IMPORT("addControlText");  // implemented
void addControlBargraph(int iPanelIndex, int iControlIndex, int iVisible, int iX, int iY, int iWidth, int iHeight,
                        int iMin, int iMax, int iR, int iG, int iB) WASM_IMPORT("addControlBargraph");  // implemented
void addControlButton(int iPanelIndex, int iControlIndex, int iVisible, int iX, int iY, int iWidth, int iHeight, int iR,
                      int iG, int iB, int iRFore, int iGFore, int iBFore,
                      const char *szText) WASM_IMPORT("addControlButton");  // implemented
void setControlValueMinMax(int iPanelIndex, int iControlIndex, int bEnableMinMax, int iMin, int iMax)
    WASM_IMPORT("setControlValueMinMax");  // implemented
void setControlValueMinMaxF(int iPanelIndex, int iControlIndex, int bEnableMinMax, float iMinF, float iMaxF)
    WASM_IMPORT("setControlValueMinMaxF");  // implemented
void setLogDataText(int iLogIndex, const char *szText) WASM_IMPORT("setLogDataText");                    // implemented
void setPlotData(int iPlotData, int iSettings, int iNewValue) WASM_IMPORT("setPlotData");                // implemented
void setControlValue(int iPanelIndex, int iControlIndex, int iNewValue) WASM_IMPORT("setControlValue");  // tested
void setControlValueFloat(int iPanelIndex, int iControlIndex, float fNewValue)
    WASM_IMPORT("setControlValueFloat");  // implemented
void exitToMainAppMenu() WASM_IMPORT("exitToMainAppMenu");  // implemented
void showPanel(int iPanel) WASM_IMPORT("showPanel");  // tested
void addControlPictureFromFile(int iPanelIndex, int iControlIndex, int iX, int iY, const char *szPicture, int iVisible)
    WASM_IMPORT("addControlPictureFromFile");  // implemented
enum printOutDataType {
    printInt32 = 0,
    printUInt32,
    printInt16,
    printUInt16,
    printUint8,
    printInt8,
    printChar,
    printBool,
};
enum printOutColor {
    printColorNormal = 0,
    printColorBlack,
    printColorBlue,
    printColorGreen,
    printColorCyan,
    printColorRed,
    printColorPurple,
    printColorBrown,
    printColorYellow,
    printColorWhite,
};
void printInt(const char *szFormatSpec, enum printOutColor iColor, enum printOutDataType iDataType, int iDataValue)
    WASM_IMPORT("printInt");  // implemented
void printFloat(const char *szFormatSpec, enum printOutColor iColor, float fDataItem)
    WASM_IMPORT("printFloat");  // implemented
// Sensors
void setAudioSettings(int bStreamMic, int bStreamFFT, int bEnableMicPlotData, int iMICPlotDataIndex,
                      int bEnableFFTPlotData, int iFFTPlotDataIndex) WASM_IMPORT("setAudioSettings");  // implemented
// fpga
int loadFPGAFromFile(char *szFilePath) WASM_IMPORT("loadFPGAFromFile");  // implemented
// run script
int runZoomIOScript(char *szScript) WASM_IMPORT("runZoomIOScript");  // implemented
// RTC
void getRTC() WASM_IMPORT("getRTC");  // implemented
// TODO

void setSensorSettings(int bStreamAccel, int bStreamTemp, int iRateMilliseconds, int bEnableAccelXPlotData,
                       int iAccelXPlotDataIndex, int bEnableAccelYPlotData, int iAccelYPlotDataIndex,
                       int bEnableAccelZPlotData, int iAccelZPlotDataIndex, int bEnableTempPlotData,
                       int iTempPlotDataIndex) WASM_IMPORT("setSensorSettings");
void setAppLogSettings(int bLogIRCodes, int bLogAccel, int bLogTempC, int bLogTempF, int iLogIndex)
    WASM_IMPORT("setAppLogSettings");
// dialogs
void showDialogMsgBox(char *szMessage, int bShowOk, int bShowOkCancel, int bShowYesNo, int iPictureIndex,
                      int iAutoCloseHalfSec) WASM_IMPORT("showDialogMsgBox");
void showDialogProgressBar(char *szMessage, int iPictureIndex, int iValue0to100, int bShowOkToClose)
    WASM_IMPORT("showDialogProgressBar");
void showDialogNumEdit(char *szMessage, int bUnsigned, int bHexFormat, int bUseMinMax, int iInitalValue, int iMin,
                       int iMax) WASM_IMPORT("showDialogNumEdit");
void showDialogNumEditFloat(char *szMessage, int iFoatDigits, int bUseMinMax, float fInitalValue, int fMin, int fMax)
    WASM_IMPORT("showDialogNumEditFloat");
void showDialogTextEdit(char *szMessage, char *szInitialValue) WASM_IMPORT("showDialogTextEdit");
void showDialogPickList(char *szMessage, int iLogIndex, int iDefaultItem) WASM_IMPORT("showDialogPickList");