rust/pip_boy/src/fwwasm.rs

#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setListItemText(
        iLogIndex: ::core::ffi::c_int,
        iListIndex: ::core::ffi::c_int,
        szText: *const ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setListItemSelected(iLogIndex: ::core::ffi::c_int, iListIndex: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setListItemTopIndex(iLogIndex: ::core::ffi::c_int, iListIndex: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn clearLogOrPlotData(
        iLogIndexPlusOne: ::core::ffi::c_int,
        iPlotIndexPlusOne: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlLogList(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iLog: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iFontType: ::core::ffi::c_int,
        iFontSize: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        iRFont: ::core::ffi::c_int,
        iGFont: ::core::ffi::c_int,
        iBFont: ::core::ffi::c_int,
        iListMode: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPlotXAxis(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iScrollMode: ::core::ffi::c_int,
        iTimeMin: ::core::ffi::c_ulonglong,
        iTimeMax: ::core::ffi::c_ulonglong,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPlotData(
        iPlotDataIndex: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPlot(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iPlotDataIndexBitField: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlNumber(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iFontSize: ::core::ffi::c_int,
        iFontType: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        iIsFloat: ::core::ffi::c_int,
        iFloatDigits: ::core::ffi::c_int,
        bIsHexFormat: ::core::ffi::c_int,
        bIsUnsigned: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPicture(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iPictureId: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlText(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iFontType: ::core::ffi::c_int,
        iFontSize: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        szText: *const ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlBargraph(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlButton(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iWidth: ::core::ffi::c_int,
        iHeight: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        iRFore: ::core::ffi::c_int,
        iGFore: ::core::ffi::c_int,
        iBFore: ::core::ffi::c_int,
        szText: *const ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValueMinMax(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        bEnableMinMax: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValueMinMaxF(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        bEnableMinMax: ::core::ffi::c_int,
        iMinF: f32,
        iMaxF: f32,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setLogDataText(iLogIndex: ::core::ffi::c_int, szText: *const ::core::ffi::c_char);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setPlotData(
        iPlotData: ::core::ffi::c_int,
        iSettings: ::core::ffi::c_int,
        iNewValue: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValue(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iNewValue: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValueFloat(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        fNewValue: f32,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn exitToMainAppMenu();
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showPanel(iPanel: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addControlPictureFromFile(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        szPicture: *const ::core::ffi::c_char,
        iVisible: ::core::ffi::c_int,
    );
}
pub const printOutDataType_printInt32: printOutDataType = 0;
pub const printOutDataType_printUInt32: printOutDataType = 1;
pub const printOutDataType_printInt16: printOutDataType = 2;
pub const printOutDataType_printUInt16: printOutDataType = 3;
pub const printOutDataType_printUint8: printOutDataType = 4;
pub const printOutDataType_printInt8: printOutDataType = 5;
pub const printOutDataType_printChar: printOutDataType = 6;
pub const printOutDataType_printBool: printOutDataType = 7;
pub type printOutDataType = ::core::ffi::c_uint;
pub const printOutColor_printColorNormal: printOutColor = 0;
pub const printOutColor_printColorBlack: printOutColor = 1;
pub const printOutColor_printColorBlue: printOutColor = 2;
pub const printOutColor_printColorGreen: printOutColor = 3;
pub const printOutColor_printColorCyan: printOutColor = 4;
pub const printOutColor_printColorRed: printOutColor = 5;
pub const printOutColor_printColorPurple: printOutColor = 6;
pub const printOutColor_printColorBrown: printOutColor = 7;
pub const printOutColor_printColorYellow: printOutColor = 8;
pub const printOutColor_printColorWhite: printOutColor = 9;
pub type printOutColor = ::core::ffi::c_uint;
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn printInt(
        szFormatSpec: *const ::core::ffi::c_char,
        iColor: printOutColor,
        iDataType: printOutDataType,
        iDataValue: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn printFloat(
        szFormatSpec: *const ::core::ffi::c_char,
        iColor: printOutColor,
        fDataItem: f32,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setAudioSettings(
        bStreamMic: ::core::ffi::c_int,
        bStreamFFT: ::core::ffi::c_int,
        bEnableMicPlotData: ::core::ffi::c_int,
        iMICPlotDataIndex: ::core::ffi::c_int,
        bEnableFFTPlotData: ::core::ffi::c_int,
        iFFTPlotDataIndex: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn loadFPGAFromFile(szFilePath: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn runZoomIOScript(szScript: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getRTC();
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setSensorSettings(
        bStreamAccel: ::core::ffi::c_int,
        bStreamTemp: ::core::ffi::c_int,
        iRateMilliseconds: ::core::ffi::c_int,
        bEnableAccelXPlotData: ::core::ffi::c_int,
        iAccelXPlotDataIndex: ::core::ffi::c_int,
        bEnableAccelYPlotData: ::core::ffi::c_int,
        iAccelYPlotDataIndex: ::core::ffi::c_int,
        bEnableAccelZPlotData: ::core::ffi::c_int,
        iAccelZPlotDataIndex: ::core::ffi::c_int,
        bEnableTempPlotData: ::core::ffi::c_int,
        iTempPlotDataIndex: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setAppLogSettings(
        bLogIRCodes: ::core::ffi::c_int,
        bLogAccel: ::core::ffi::c_int,
        bLogTempC: ::core::ffi::c_int,
        bLogTempF: ::core::ffi::c_int,
        iLogIndex: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showDialogMsgBox(
        szMessage: *mut ::core::ffi::c_char,
        bShowOk: ::core::ffi::c_int,
        bShowOkCancel: ::core::ffi::c_int,
        bShowYesNo: ::core::ffi::c_int,
        iPictureIndex: ::core::ffi::c_int,
        iAutoCloseHalfSec: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showDialogProgressBar(
        szMessage: *mut ::core::ffi::c_char,
        iPictureIndex: ::core::ffi::c_int,
        iValue0to100: ::core::ffi::c_int,
        bShowOkToClose: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showDialogNumEdit(
        szMessage: *mut ::core::ffi::c_char,
        bUnsigned: ::core::ffi::c_int,
        bHexFormat: ::core::ffi::c_int,
        bUseMinMax: ::core::ffi::c_int,
        iInitalValue: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showDialogNumEditFloat(
        szMessage: *mut ::core::ffi::c_char,
        iFoatDigits: ::core::ffi::c_int,
        bUseMinMax: ::core::ffi::c_int,
        fInitalValue: f32,
        fMin: ::core::ffi::c_int,
        fMax: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showDialogTextEdit(
        szMessage: *mut ::core::ffi::c_char,
        szInitialValue: *mut ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showDialogPickList(
        szMessage: *mut ::core::ffi::c_char,
        iLogIndex: ::core::ffi::c_int,
        iDefaultItem: ::core::ffi::c_int,
    );
}
